// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/Core plugins should not be able to add a plugin that has no id 1`] = `"Your plugin must have an id"`;

exports[`src/Core plugins should not be able to add a plugin that has no type 1`] = `"Your plugin must have a type"`;

exports[`src/Core plugins should not be able to add an invalid plugin 1`] = `"Expected a plugin class, but got object. Please verify that the plugin was imported and spelled correctly."`;

exports[`src/Core plugins should prevent the same plugin from being added more than once 1`] = `
"Already found a plugin named 'TestSelector1'.
        Tried to use: 'TestSelector1'.
        Uppy is currently limited to running one of every plugin.
        Share your use case with us over at
        https://github.com/transloadit/uppy/issues/
        if you want us to reconsider."
`;

exports[`src/Core uploading a file should return a { successful, failed, uploadId } object containing file objects and the uploadID 1`] = `
Object {
  "failed": Array [],
  "successful": Array [
    Object {
      "data": Uint8Array [],
      "extension": "jpg",
      "id": "uppy-foojpg-image/jpeg",
      "isRemote": false,
      "meta": Object {
        "name": "foo.jpg",
        "type": null,
      },
      "name": "foo.jpg",
      "preview": undefined,
      "progress": Object {
        "bytesTotal": 0,
        "bytesUploaded": 0,
        "percentage": 0,
        "uploadComplete": false,
        "uploadStarted": false,
      },
      "remote": "",
      "size": 0,
      "source": "jest",
      "type": null,
    },
    Object {
      "data": Uint8Array [],
      "extension": "jpg",
      "id": "uppy-barjpg-image/jpeg",
      "isRemote": false,
      "meta": Object {
        "name": "bar.jpg",
        "type": null,
      },
      "name": "bar.jpg",
      "preview": undefined,
      "progress": Object {
        "bytesTotal": 0,
        "bytesUploaded": 0,
        "percentage": 0,
        "uploadComplete": false,
        "uploadStarted": false,
      },
      "remote": "",
      "size": 0,
      "source": "jest",
      "type": null,
    },
  ],
}
`;

exports[`src/Core uploading a file should return files with errors in the { failed } key 1`] = `
Object {
  "failed": Array [
    Object {
      "data": Uint8Array [],
      "error": "This is bar and I do not like bar",
      "extension": "jpg",
      "id": "uppy-barjpg-image/jpeg",
      "isRemote": false,
      "meta": Object {
        "name": "bar.jpg",
        "type": null,
      },
      "name": "bar.jpg",
      "preview": undefined,
      "progress": Object {
        "bytesTotal": 0,
        "bytesUploaded": 0,
        "percentage": 0,
        "uploadComplete": false,
        "uploadStarted": false,
      },
      "remote": "",
      "size": 0,
      "source": "jest",
      "type": null,
    },
  ],
  "successful": Array [
    Object {
      "data": Uint8Array [],
      "extension": "jpg",
      "id": "uppy-foojpg-image/jpeg",
      "isRemote": false,
      "meta": Object {
        "name": "foo.jpg",
        "type": null,
      },
      "name": "foo.jpg",
      "preview": undefined,
      "progress": Object {
        "bytesTotal": 0,
        "bytesUploaded": 0,
        "percentage": 0,
        "uploadComplete": false,
        "uploadStarted": false,
      },
      "remote": "",
      "size": 0,
      "source": "jest",
      "type": null,
    },
  ],
}
`;
